[gd_scene load_steps=8 format=3 uid="uid://dq2qxxr0sgm43"]

[ext_resource type="Script" uid="uid://8nkwmodo4q61" path="res://Game/Entity/Bestia/bestia.gd" id="1_nxc77"]
[ext_resource type="PackedScene" uid="uid://doxvjridoygcr" path="res://Game/VFX/HealthBar/HealthBar.tscn" id="2_j45w2"]
[ext_resource type="PackedScene" uid="uid://g1nu1oan0ehe" path="res://Game/Entity/NameTag/NameTag.tscn" id="3_b5q2y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x0ia3"]
albedo_color = Color(0.8158271, 0.54600686, 0.10122792, 1)
stencil_flags = 2
stencil_color = Color(0.86025685, 0.5340028, 0.82494587, 1)
stencil_outline_thickness = 0.096

[sub_resource type="SphereMesh" id="SphereMesh_nxc77"]
material = SubResource("StandardMaterial3D_x0ia3")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_j45w2"]
points = PackedVector3Array(0.4578707, 0.19807906, 0.01578243, -0.48873997, -0.09168735, -0.04518683, -0.47150937, -0.1370268, -0.090701535, 0.07635914, -0.33327514, 0.36417928, 0.13656896, -0.33242497, -0.3469059, -0.15161654, 0.47198188, -0.060245913, -0.10534735, 0.21193622, 0.43966028, -0.045016855, 0.19809827, -0.4564163, 0.4090765, -0.15116782, 0.2425159, -0.27137637, -0.37776056, 0.18187061, 0.41147974, -0.07598096, -0.27324012, 0.19819722, -0.4561612, -0.04493101, -0.24064063, -0.33167413, -0.2857683, 0.22713655, 0.2567203, 0.36304116, 0.22752243, 0.42360392, -0.13548777, -0.37899047, 0.060702223, 0.31946206, -0.40674683, 0.18104935, -0.22569102, -0.014631338, -0.09176946, 0.49022886, -0.37785473, 0.30279276, 0.121712334, 0.046232317, 0.45601088, 0.19818504, -0.22746402, -0.060786348, -0.44034815, 0.22845526, 0.06072284, -0.43988743, -0.09113759, -0.48924586, -0.045174047, 0.44186506, -0.22821625, -0.044958085, 0.31717873, 0.24121423, -0.30081153, -0.044848714, 0.39473665, -0.30295488, -0.316348, -0.19622163, 0.33255145, 0.19844188, -0.03042933, 0.45723665, 0.061471395, -0.1522456, -0.47130713, 0.36308852, 0.25670764, 0.22707908, 0.15213433, -0.43948856, 0.18237916, -0.21072462, 0.36227608, 0.2722302)

[sub_resource type="ViewportTexture" id="ViewportTexture_b5q2y"]
viewport_path = NodePath("SubViewport")

[node name="Bestia" type="Node3D"]
script = ExtResource("1_nxc77")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.37640834, 0)
mesh = SubResource("SphereMesh_nxc77")

[node name="Area3D" type="Area3D" parent="Model"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/Area3D"]
shape = SubResource("ConvexPolygonShape3D_j45w2")

[node name="HealthBar" parent="." instance=ExtResource("2_j45w2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4495666, 0)
pixel_size = 0.002
texture = SubResource("ViewportTexture_b5q2y")

[node name="NameTag" parent="." instance=ExtResource("3_b5q2y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2949905, 0)
visible = false
text = "Blob"

[connection signal="input_event" from="Model/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Model/Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Model/Area3D" to="." method="_on_area_3d_mouse_exited"]
